(library
 (name odoc_xref2)
 (public_name odoc.xref2)
; (preprocess (pps landmarks.ppx --auto))
 (libraries compiler-libs.common odoc_model odoc_loader 
; landmarks 
 unix)
 (modules_without_implementation errors)
 )

(rule
 (targets test.output)
 (deps (package odoc)
   (alias ../../mdx/install))
 (action
   (run ocaml-mdx test -o %{targets} %{dep:test.md})))

(rule
 (alias runtest)
 (enabled_if (>= %{ocaml_version} 4.07))
 (action
  (diff test.md test.output)))

(rule
 (targets scratch.output)
 (deps (package odoc)
   (alias ../../mdx/install))
 (action
   (run ocaml-mdx test -o %{targets} %{dep:scratch.md})))

(rule
 (alias runtest)
 (enabled_if (>= %{ocaml_version} 4.07))
 (action
  (diff scratch.md scratch.output)))

(rule
 (targets paths.output)
 (deps (package odoc)
   (alias ../../mdx/install))
 (action
   (run ocaml-mdx test -o %{targets} %{dep:paths.md})))

(rule
 (alias runtest)
 (enabled_if (>= %{ocaml_version} 4.07))
 (action
  (diff paths.md paths.output)))

(rule
 (targets notes.output)
 (deps (package odoc)
   (alias ../../mdx/install))
 (action
   (run ocaml-mdx test -o %{targets} %{dep:notes.md})))

(rule
 (alias runtest)
 (enabled_if (>= %{ocaml_version} 4.07))
 (action
  (diff notes.md notes.output)))


