(library
 (name shadow_stdlib)
 (public_name baseish.shadow_stdlib)
 (libraries caml)
 (flags :standard -safe-string)
 (preprocess no_preprocessing))

;; Generate a file containing:
;;
;; val output : out_channel -> string -> unit [@@deprecated "..."]
;; type nonrec in_channel = in_channel [@@deprecated "..."]

(rule
 (targets shadow_stdlib.mli)
 (deps
  (:first_dep ../gen/gen.exe)
  ../../compiler-stdlib/src/caml.cma)
 (action
  (run %{first_dep} -caml-cmi ../../compiler-stdlib/src/.caml.objs/byte/caml.cmi -o %{targets})))
