(library
 (name ocamlary)
 (modules ocamlary))

(alias
 (name runtest)
 (deps
  (:x ocamlary.md)
  (package odoc)
  .ocamlary.objs/byte/ocamlary.cmti
  .ocamlary.objs/byte/ocamlary.cmt
  .ocamlary.objs/byte/ocamlary.cmi)
 (action
  (progn
   (run ocaml-mdx test %{x})
   (diff? %{x} %{x}.corrected))))
